--- a/etterem/pom.xml
+++ b/etterem/pom.xml
@@ -14,8 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>1.4.1.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -47,14 +46,8 @@
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-spring-boot-starter</artifactId>
+			<version>1.0.1</version>
 		</dependency>
-		<!--<dependency>-->
-			<!--<groupId>com.vaadin</groupId>-->
-			<!--<artifactId>vaadin-bom</artifactId>-->
-			<!--<version>7.7.3</version>-->
-			<!--<type>pom</type>-->
-			<!--<scope>import</scope>-->
-		<!--</dependency>-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -70,20 +63,20 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.4.1208-jdbc42-atlassian-hosted</version>
 		</dependency>
-		<dependency>
-			<groupId>com.querydsl</groupId>
-			<artifactId>querydsl-jpa</artifactId>
-			<version>4.1.4</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.querydsl</groupId>-->
+			<!--<artifactId>querydsl-jpa</artifactId>-->
+			<!--<version>4.1.4</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-server</artifactId>
-			<!--<version>7.7.3</version>-->
+			<version>7.7.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-client-compiled</artifactId>
-			<!--<version>7.7.3</version>-->
+			<version>7.7.3</version>
 		</dependency>
 	</dependencies>
 
@@ -92,7 +85,8 @@
 			<dependency>
 				<groupId>com.vaadin</groupId>
 				<artifactId>vaadin-bom</artifactId>
-				<version>8.0.5</version>
+				<!--<version>8.0.5</version>-->
+				<version>7.7.3</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -105,28 +99,57 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!--<plugin>-->
+				<!--<groupId>com.mysema.maven</groupId>-->
+				<!--<artifactId>apt-maven-plugin</artifactId>-->
+				<!--<version>1.1.3</version>-->
+				<!--<executions>-->
+					<!--<execution>-->
+						<!--<goals>-->
+							<!--<goal>process</goal>-->
+						<!--</goals>-->
+						<!--<configuration>-->
+							<!--<outputDirectory>target/generated-sources/java</outputDirectory>-->
+							<!--<processor>com.querydsl.apt.jpa,JPAAnnotationProcessor</processor>-->
+						<!--</configuration>-->
+					<!--</execution>-->
+				<!--</executions>-->
+				<!--<dependencies>-->
+					<!--<dependency>-->
+						<!--<groupId>com.querydsl</groupId>-->
+						<!--<artifactId>querydsl-apt</artifactId>-->
+						<!--<version>4.1.4</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
+			<!--</plugin>-->
 			<plugin>
-				<groupId>com.mysema.maven</groupId>
-				<artifactId>apt-maven-plugin</artifactId>
-				<version>1.1.3</version>
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-maven-plugin</artifactId>
+
 				<executions>
 					<execution>
+						<phase>compile</phase>
 						<goals>
-							<goal>process</goal>
+							<goal>clean</goal>
+							<goal>resources</goal>
+							<goal>update-theme</goal>
+							<!-- <goal>update-widgetset</goal>-->
+							<goal>compile-theme</goal>
+							<goal>compile</goal>
 						</goals>
-						<configuration>
-							<outputDirectory>target/generated-sources/java</outputDirectory>
-							<processor>com.querydsl.apt.jpa,JPAAnnotationProcessor</processor>
-						</configuration>
 					</execution>
 				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.querydsl</groupId>
-						<artifactId>querydsl-apt</artifactId>
-						<version>4.1.4</version>
-					</dependency>
-				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<!-- <webappDirectory>${basedir}/src/main/webapp</webappDirectory>-->
+					<!-- <webResources>
+                         <webResource>${basedir}/src/main/webapp</webResource>
+                     </webResources>-->
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
