--- a/etterem/src/main/resources/application.properties
+++ b/etterem/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database=postgresql
 
-liquibase.enabled=false
+liquibase.enabled=true
+liquibase.change-log=classpath:script/master.xml
 
 server.context-path=/etterem
